# powerboard

./: .gitignore  BUILD.md  C++rules.txt  CMakeLists.txt  README.md  policy.yaml  powerboard-instructions.md  powerboard_2026-07.csv
.claude/skills/: aura-optimize.sh
packaging/: aura-flux.bat  powerboard.desktop
src/: ai.h  benchmarks.h  clipboard.h  datalogger.h  main.cpp  scanner.h  tokens.h  types.h  utils.h
